[metadata]
name = MesoSim Backend Scripts
author = Jonathan Thielen
author_email = jon@thielen.science
license = Apache-2.0
description = Backend for meteorological case study simulation
long_description = file: README.md
keywords = meteorology, science, simulation
url = https://github.com/MesoSim/backend
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Education
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX
    Programming Language :: Python
    Topic :: Scientific/Engineering
    Topic :: Games/Entertainment :: Simulation
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
zip_safe = True
python_requires = >=3.7
install_requires =
    setuptools
    pandas>=1.0.1
    pyproj>=1.9.6
    requests
    mesosim
setup_requires = setuptools; setuptools_scm
scripts =
    scripts/archive-lsrs
    scripts/archive-warnings
    scripts/process-radar
    scripts/simulation-radar
    scripts/simulation-reset
    scripts/simulation-start
    scripts/simulation-warning
    scripts/run-case

[flake8]
max-line-length = 95
ignore=
    # whitespace before ':' - doesn't work well with black
    E203
    E402
    # line too long - let black worry about that
    E501
    # do not assign a lambda expression, use a def
    E731
    # line break before binary operator
    W503
exclude=
    build

[isort]
default_section=THIRDPARTY
multi_line_output=3
include_trailing_comma=True
force_grid_wrap=0
use_parentheses=True
line_length=95

[doc8]
file-encoding = utf8
max-line-length = 95

[pydocstyle]
match = (?!(test_|setup)).*\.py
match-dir = (?!(build|docs))[^.].*
convention = numpy
